<resources>
    <string name="app_name">Lapit chat</string>
    <string name="welcome_to_lapit_chat">Welcome to lapit chat</string>
    <string name="RegisterButton">Need a new account?</string>
    <string name="loginButton">Allready have account</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="display_name">Display name</string>
    <string name="create_account">Create account</string>
    <string name="login_account">Login</string>
    <string name="logout">Logout</string>
    <string name="all_users">All users</string>
    <string name="account_settings">Account settings</string>
    <string name="reg_main_text">Create a new account</string>
    <string name="log_main_text">Login to your account</string>
    <string name="reg_error">Authentication failed.</string>
    <string name="reg_message">Please wait...</string>
    <string name="reg_title">Registering user</string>
    <string name="log_title">Login user</string>
    <string name="tab_requests">Requests</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_friends">Friends</string>
    <string name="change_image">Change image</string>
    <string name="change_status">Change status</string>
    <string name="default_status">Status</string>
    <string name="account_status">Acoount status</string>
    <string name="your_status">Your status</string>
    <string name="save_change">Save change</string>
    <string name="status_title">Change status</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="image_title">Upload image</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="profile_title">Profile image</string>
    <string name="all_friends">All friends</string>
    <string name="decline_friend_request">Decline friend request</string>
    <string name="cancel_friend_request">Cancel friend request</string>
    <string name="accept_friend_request">Accept friend request</string>
    <string name="unfriend_request">Unfriend request</string>

</resources>