<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.mihailovalex.lapitchat.SettingsActivity">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:src="@drawable/blank_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />
    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:text="Display name" />

    <TextView
        android:id="@+id/setting_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/default_status" />

    <Button
        android:id="@+id/setting_change_image_button"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/setting_change_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_change_image_button"
        android:layout_centerHorizontal="true"
        android:text="@string/change_status" />
</RelativeLayout>